logs/symposion.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/symposion'...
Listing './lib/python3.5/site-packages/symposion/boxes'...
Listing './lib/python3.5/site-packages/symposion/boxes/templatetags'...
Compiling './lib/python3.5/site-packages/symposion/boxes/utils.py'...
***   File "./lib/python3.5/site-packages/symposion/boxes/utils.py", line 13
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/symposion/cms'...
Compiling './lib/python3.5/site-packages/symposion/cms/views.py'...
***   File "./lib/python3.5/site-packages/symposion/cms/views.py", line 65
    print form.errors
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/symposion/conference'...
Listing './lib/python3.5/site-packages/symposion/proposals'...
Listing './lib/python3.5/site-packages/symposion/proposals/templatetags'...
Listing './lib/python3.5/site-packages/symposion/reviews'...
Listing './lib/python3.5/site-packages/symposion/reviews/management'...
Listing './lib/python3.5/site-packages/symposion/reviews/management/commands'...
Compiling './lib/python3.5/site-packages/symposion/reviews/management/commands/create_review_permissions.py'...
***   File "./lib/python3.5/site-packages/symposion/reviews/management/commands/create_review_permissions.py", line 25
    print perm
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/symposion/reviews/templatetags'...
Listing './lib/python3.5/site-packages/symposion/schedule'...
Compiling './lib/python3.5/site-packages/symposion/schedule/helpers.py'...
***   File "./lib/python3.5/site-packages/symposion/schedule/helpers.py", line 30
    print "created {} [start={}; end={}]".format(slot.kind.label, slot.start, slot.end)
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/symposion/speakers'...
Listing './lib/python3.5/site-packages/symposion/speakers/management'...
Listing './lib/python3.5/site-packages/symposion/speakers/management/commands'...
Listing './lib/python3.5/site-packages/symposion/sponsorship'...
Listing './lib/python3.5/site-packages/symposion/sponsorship/management'...
Listing './lib/python3.5/site-packages/symposion/sponsorship/management/commands'...
Compiling './lib/python3.5/site-packages/symposion/sponsorship/management/commands/reset_sponsor_benefits.py'...
***   File "./lib/python3.5/site-packages/symposion/sponsorship/management/commands/reset_sponsor_benefits.py", line 24
    print "created", sponsor_benefit, "for", sponsor
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/symposion/sponsorship/templatetags'...
Listing './lib/python3.5/site-packages/symposion/static'...
Listing './lib/python3.5/site-packages/symposion/static/chosen'...
Listing './lib/python3.5/site-packages/symposion/static/datatables'...
Listing './lib/python3.5/site-packages/symposion/static/datatables/js'...
Listing './lib/python3.5/site-packages/symposion/static/tabletools'...
Listing './lib/python3.5/site-packages/symposion/static/tabletools/js'...
Listing './lib/python3.5/site-packages/symposion/static/tabletools/swf'...
Listing './lib/python3.5/site-packages/symposion/teams'...
Listing './lib/python3.5/site-packages/symposion/teams/templatetags'...
Listing './lib/python3.5/site-packages/symposion/templates'...
Listing './lib/python3.5/site-packages/symposion/templates/boxes'...
Listing './lib/python3.5/site-packages/symposion/templates/cms'...
Listing './lib/python3.5/site-packages/symposion/templates/conference'...
Listing './lib/python3.5/site-packages/symposion/templates/emails'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/proposal_new_message'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/proposal_updated'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/speaker_addition'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/speaker_invite'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/speaker_no_profile'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/sponsor_signup'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/teams_user_applied'...
Listing './lib/python3.5/site-packages/symposion/templates/emails/teams_user_invited'...
Listing './lib/python3.5/site-packages/symposion/templates/proposals'...
Listing './lib/python3.5/site-packages/symposion/templates/reviews'...
Listing './lib/python3.5/site-packages/symposion/templates/schedule'...
Listing './lib/python3.5/site-packages/symposion/templates/sitetree'...
Listing './lib/python3.5/site-packages/symposion/templates/speakers'...
Listing './lib/python3.5/site-packages/symposion/templates/sponsorship'...
Listing './lib/python3.5/site-packages/symposion/templates/teams'...
Listing './lib/python3.5/site-packages/symposion/utils'...
Listing './lib/python3.5/site-packages/symposion-1.0b2.dev2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
